--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@
             /* Components */
             h3 {
                 margin-top: 0;
+                color: #79ff8bff;
             }
             .caption {
                 font-size: 0.8rem;
@@ -104,7 +105,7 @@
             }
 
             .btn-primary {
-                background-color: #fff;
+                background-color: #79ff8bff;
                 color: #000;
                 border: none;
                 font-weight: 600;
@@ -203,8 +204,8 @@
 
             .meta-mono {
                 font-family: "JetBrains Mono", monospace;
-                font-size: 0.7rem;
-                color: #666;
+                font-size: 1rem;
+                color: #79ff8bff;
                 margin-bottom: 12px;
                 display: flex;
                 align-items: center;
